--- a/yarn.html
+++ b/yarn.html
@@ -19,20 +19,20 @@
             window.location.href = "index.html";
         }
     </script>
-    
+
     <header>
         <h1>TNano Estimator - Company</h1>
         <p>V2.1</p>
         <div class="pageLinkHolder">
-            <a href="yarn.html">50 µm yarn</a>
-            <a href="hydrosonix.html" style="outline: #FF7719 solid 2px;">HydroSonix Speaker</a>
+            <a href="yarn.html" style="outline: #FF7719 solid 2px;">50 µm yarn</a>
+            <a href="hydroSonix.html">HydroSonix Speaker</a>
         </div>
     </header>
 
     <img src="media\TnanoLogo.png" id="tnanoBackgroundLogo">
     <div class="content">
         <div class="estimator">
-            <img src="media\HydrosonixV5.png" class="productImage">
+            <img src="media\Yarn V4.png" class="productImage">
             <h2>Inputs</h2>
 
             <div class="contentBox">
@@ -43,14 +43,25 @@
                 </select>
             </div>
 
-            <div class="contentBox">
-                <label for="amount">Speakers per month</label>
-                <input type="number" id="amount" name="amount" min="0.001" value="10" onchange="RunCalculator()">
+            <div class="contentBox" style="flex-wrap: wrap;">
+                <label for="amount">Production</label>
+                <input type="number" id="amount" name="amount" min="0.001" max="100000" value="100" onchange="RunCalculator()">
+                <select name="amountUnit" id="amountUnit" onchange="AmountUnitChanged(this.value)"
+                    style="flex-grow: 0;">
+                    <option value="grams">grams</option>
+                    <option value="kg">kg</option>
+                    <option value="lbs">lbs</option>
+                    <option value="km">km</option>
+                    <option value="m">m</option>
+                    <option value="ft">ft</option>
+                </select>
+
+                <p style="width: 100%; font-size: 8px; margin-top: 0; padding-top: 0; margin-left: 14px;">(per month)</p>
             </div>
 
             <div class="contentBox">
                 <label for="time">Time</label>
-                <input type="number" id="time" name="time" min="1" value="3" onchange="RunCalculator()">
+                <input type="number" id="time" name="time" min="1" max="48" value="6" onchange="RunCalculator()">
                 <label for="time">months</label>
             </div>
 
@@ -65,28 +76,31 @@
             <h2>Resulting production volume</h2>
 
             <div class="contentBox">
-                <p>Speakers</p>
-                <p class="result" id="productionVolumeText">200</p>
-                <select name="productionVolumeUnit" id="productionVolumeUnit" onchange="RunCalculator()">
-                    <option value="total">in total</option>
+                <p>Wafers</p>
+                <p class="result" id="waferVolumeText">200</p>
+                <select name="waferVolumeUnit" id="waferVolumeUnit" onchange="RunCalculator()" style="flex-grow:0;">
                     <option value="month">per month</option>
                     <option value="day">per day</option>
+                    <option value="total">in total</option>
                     <option value="year">per year</option>
                 </select>
             </div>
 
             <div class="contentBox">
-                <p>Wafers</p>
-                <p class="result" id="waferVolumeText">200</p>
-                <select name="waferVolumeUnit" id="waferVolumeUnit" onchange="RunCalculator()">
-                    <option value="total">in total</option>
-                    <option value="month">per month</option>
-                    <option value="day">per day</option>
-                    <option value="year">per year</option>
+                <p>Yarn</p>
+                <p class="result" id="productionVolumeText">200</p>
+                <select name="productionVolumeUnit" id="productionVolumeUnit" onchange="RunCalculator()"
+                    style="flex-grow:0;">
+                    <option value="grams">grams</option>
+                    <option value="kg">kg</option>
+                    <option value="lbs">lbs</option>
+                    <option value="km">km</option>
+                    <option value="m">m</option>
+                    <option value="ft">ft</option>
                 </select>
             </div>
 
-            <h2>Price per speaker based on number produced</h2>
+            <h2>Price per gram based on production</h2>
 
             <canvas id="timePriceChart" style="width:100%;"></canvas>
 
@@ -96,7 +110,15 @@
             <div class="contentBox">
                 <p>Price</p>
                 <p class="result" id="pricePerAmount">$560</p>
-                <p>per speaker</p>
+                <select name="pricePerAmountUnit" id="pricePerAmountUnit" onchange="RunCalculator()"
+                    style="flex-grow: 0;">
+                    <option value="grams">/ gram</option>
+                    <option value="kg">/ kg</option>
+                    <option value="lbs">/ lb</option>
+                    <option value="km">/ km</option>
+                    <option value="m">/ m</option>
+                    <option value="ft">/ ft</option>
+                </select>
             </div>
 
             <div class="contentBox">
@@ -118,8 +140,12 @@
                 <select id="totalCostUnit" onchange="RunCalculator()" style="flex-grow: 0;">
                     <option value="total">total</option>
                     <option value="month">/ month</option>
-                    <option value="day">/ day</option>
-                    <option value="speaker">/ speaker</option>
+                    <option value="grams">/ gram</option>
+                    <option value="kg">/ kg</option>
+                    <option value="lbs">/ lb</option>
+                    <option value="km">/ km</option>
+                    <option value="m">/ m</option>
+                    <option value="ft">/ ft</option>
                 </select>
             </div>
 
@@ -157,8 +183,12 @@
                 <select name="revenueUnit" id="revenueUnit" onchange="RunCalculator()" style="flex-grow: 0;">
                     <option value="total">total</option>
                     <option value="month">/ month</option>
-                    <option value="day">/ day</option>
-                    <option value="speaker">/ speaker</option>
+                    <option value="grams">/ gram</option>
+                    <option value="kg">/ kg</option>
+                    <option value="lbs">/ lb</option>
+                    <option value="km">/ km</option>
+                    <option value="m">/ m</option>
+                    <option value="ft">/ ft</option>
                 </select>
             </div>
 
@@ -168,8 +198,12 @@
                 <select name="profitUnit" id="profitUnit" onchange="RunCalculator()" style="flex-grow: 0;">
                     <option value="total">total</option>
                     <option value="month">/ month</option>
-                    <option value="day">/ day</option>
-                    <option value="speaker">/ speaker</option>
+                    <option value="grams">/ gram</option>
+                    <option value="kg">/ kg</option>
+                    <option value="lbs">/ lb</option>
+                    <option value="km">/ km</option>
+                    <option value="m">/ m</option>
+                    <option value="ft">/ ft</option>
                 </select>
             </div>
         </div>
@@ -179,7 +213,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="hydroSonixCalculator.js"></script>
+    <script src="yarnCalculator.js">
+    </script>
 </body>
 
 </html>
