--- a/hydroSonix.html
+++ b/hydroSonix.html
@@ -26,6 +26,7 @@
         <div class="pageLinkHolder">
             <a href="yarn.html">50 µm yarn</a>
             <a href="hydrosonix.html" style="outline: #FF7719 solid 2px;">HydroSonix Speaker</a>
+            <a href="tnano-speaker.html">Tnano Speaker</a>
         </div>
     </header>
 
