--- a/tnano-speaker.html
+++ b/tnano-speaker.html
@@ -33,14 +33,15 @@
     <img src="media\TnanoLogo.png" id="tnanoBackgroundLogo">
     <div class="content">
         <div class="estimator">
-            <img src="media\HydrosonixV5.png" class="productImage">
+            <!-- <img src="media/silicon-wafer.png" class="productImage"> -->
             <h2>Inputs</h2>
 
             <div class="contentBox">
                 <label for="productionMode">Wafers</label>
                 <select name="productionMode" id="productionMode" onchange="RunCalculator()" style="text-align: right;">
-                    <option value="0">TNano Custom Wafers</option>
-                    <option value="1">Lintec Wafers</option>
+                    <option value="0">Silicon Wafers</option>
+                    <!-- <option value="0" style="display:none">TNano Custom Wafers</option>
+                    <option value="1" style="display:none">Lintec Wafers</option> -->
                 </select>
             </div>
 
@@ -54,7 +55,7 @@
 
             <div class="contentBox">
                 <label for="amount">Speakers per month</label>
-                <input type="number" id="amount" name="amount" min="0.001" value="10" onchange="RunCalculator()">
+                <input style type="number" id="amount" name="amount" min="0.001" value="10" onchange="RunCalculator()">
             </div>
 
             <div class="contentBox">
@@ -75,11 +76,11 @@
 
             <div class="contentBox">
                 <label>Speakers per Wafer</label>
-                <p id="speakersPerWaferDisplay">243</p>
+                <p id="speakersPerWaferDisplay"></p>
             </div>
             
             <div class="contentBox">
-                <p>Speakers</p>
+                <p>Speakers per given period</p>
                 <p class="result" id="productionVolumeText">200</p>
                 <select name="productionVolumeUnit" id="productionVolumeUnit" onchange="RunCalculator()">
                     <option value="total">in total</option>
@@ -89,16 +90,16 @@
                 </select>
             </div>
 
-            <div class="contentBox">
+            <!-- <div class="contentBox">
                 <p>Wafers</p>
-                <p class="result" id="waferVolumeText">200</p>
+                <p class="result" id="waferVolumeText">100</p>
                 <select name="waferVolumeUnit" id="waferVolumeUnit" onchange="RunCalculator()">
                     <option value="total">in total</option>
                     <option value="month">per month</option>
                     <option value="day">per day</option>
                     <option value="year">per year</option>
                 </select>
-            </div>
+            </div> -->
 
             <h2>Price per speaker based on number produced</h2>
 
